Add voice search in messages

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -344,6 +344,7 @@
     <string name="all_next">Next</string>
     <string name="all_search">Search</string>
     <string name="all_search_hint">Search...</string>
+    <string name="all_voice_search">Voice search</string>
 
 
     <!--Timetable Widget-->
