Add account fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="send_message_title">New message</string>
     <string name="note_title">Notes and achievements</string>
     <string name="homework_title">Homework</string>
-    <string name="account_title">Choose account</string>
+    <string name="account_title">Account manager</string>
 
 
     <!--Subtitles-->
